fix design insider related posts on tablet

--- a/lmisite/main_site/static/main_site/style/design_insider.scss
+++ b/lmisite/main_site/static/main_site/style/design_insider.scss
@@ -389,7 +389,7 @@ h2, h3 {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-auto-rows: 1fr;
-    width: 80%;
+    width: 90%;
     align-self: center;
     grid-gap: $content-padding;
 
@@ -397,7 +397,7 @@ h2, h3 {
       display: grid;
       grid-gap: 5px;
       align-items: center;
-      grid-template-rows: 1fr 2fr auto auto;
+      grid-template-rows: auto 1fr auto auto;
 
       > a {
         align-self: stretch;
